crates/uitest/fixtures/ty_check/loop_unroll_attr_expr_value_form.snap
---
source: crates/uitest/tests/ty_check.rs
expression: diags
input_file: fixtures/ty_check/loop_unroll_attr_expr_value_form.fe
---
error[14-0002]: invalid loop unroll attribute on `for` loop
  ┌─ loop_unroll_attr_expr_value_form.fe:2:5
  │
2 │     #[unroll = 1 + 2]
  │     ^^^^^^^^^^^^^^^^^ expected `#[unroll]` or `#[unroll(never)]`
  │
  = supported loop unroll hints are `#[unroll]` and `#[unroll(never)]`
